--- a/Figure1.Rmd
+++ b/Figure1.Rmd
@@ -11,7 +11,7 @@ library(ComplexHeatmap)
 ```
 
 ```{r}
-seurat_integrated <- readRDS("/g/scb2/zaugg/amathiou/2020Dec_scBM_Tcells/8.AbSeq/20220816_merged_SCT_xyexcluded_CompleteAnnot.rds")
+seurat_integrated <- readRDS("/g/scb2/zaugg/amathiou/2020Dec_scBM_Tcells/3.Downtream_demultiplexed/20220816_merged_SCT_xyexcluded_CompleteAnnot.rds")
 ```
 
 ```{r}
@@ -25,7 +25,7 @@ cols4 <- c(blues,
 levels(seurat_integrated) <- c("MLP", "MEP", "NP", "MDP", "pDCs", "cDCs", "preB", "pro/pre T", "Mono", 
                                "CD8 NV","CD8 hobit", "CD8 mem. 1", "CD8 mem. 2", "CD8 mem. 3", "CD8 eff. 1", "CD8 eff. 2", "CD8 IFN", 
                                "gdT", "MAIT", 
-                               "CD4 NV", "Th", "Th17", "Treg", "CD4 IFN")
+                               "CD4 NV", "CD4 mem.", "Th17", "Treg", "CD4 IFN")
 pdf(file = "/g/scb2/zaugg/amathiou/2020Dec_scBM_Tcells/6.ManuscriptFigures/Figure1/202210_Fig1b_UMAP.pdf", width = 7.5, height = 5) #202208 has alpha
 DimPlot(seurat_integrated, pt.size = 0.4, raster = F, shuffle = F, label.size = 5, label = T, repel = T, order = F, cols = cols4) + theme_void()
 dev.off()
@@ -36,7 +36,7 @@ dev.off()
 levels(seurat_integrated) <- c("MLP", "MEP", "NP", "MDP", "pDCs", "cDCs", "preB", "Mono", "pro/pre T",  
                                "CD8 NV","CD8 hobit", "CD8 mem. 1", "CD8 mem. 2", "CD8 mem. 3", "CD8 eff. 1", "CD8 eff. 2", 
                                "gdT", "MAIT", 
-                               "CD4 NV", "Th", "Th17", "Treg", 
+                               "CD4 NV", "CD4 mem.", "Th17", "Treg", 
                                "CD8 IFN", "CD4 IFN")
 levels_htmp <- levels(seurat_integrated)
 ```
@@ -76,7 +76,7 @@ zscore[zscore > 2.5] <- 2.5
 zscore[zscore < -2.5] <- -2.5
 ```
 
-```{r, fig.width=3, fig.height=4}
+```{r}
 div_colors <- rev(c("#d45e5e", "#f08080", "#f4978e", "#f8ad9d", "#fbc4ab", "#fef4d7", "white"))
 pdf(file = "/g/scb2/zaugg/amathiou/2020Dec_scBM_Tcells/6.ManuscriptFigures/Figure1/202208_Fig1_MarkerTFs_AvHtmp.pdf", width =7, height = 4)
 Heatmap(t(zscore[levels_htmp, c("GATA2", "KLF1", "EGR1", "IRF8","EBF1", "SPI1", "ZEB1",  
